hphp/test/slow/rx/missing_reactivity5.php.expectf
Fatal error: `__OnlyRxIfImpl` and `__AtMostRxAsArgs` annotations cannot be used without `__Pure`. in %s/test/slow/rx/missing_reactivity5.php on line 3
